--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,45 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/jass.css">
+  <title>Tech Blog</title>
+  <link rel="stylesheet" type="text/css" href="/css/jass.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
-  <nav>
-    <button class="btn" id='home'><a href="/">Home</a></button>
-    <button class="btn" id='home'>Dashboard</button>
-
-    <!-- Only display the logout button if the user is logged in -->
-    {{#if logged_in}}
-
-    <button class="btn" id="logout">logout</button>
-    {{else}}
-    <button class="btn" id='home'><a href="/login">Login</a></button>
-    {{/if}}
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <button class="btn" id='newPost'><a class="nav-link active" href="/post">New Post +</a></button>
-      </li>
-    </ul>
-    <nav>
-      <h1 class="tech-header">THE TECH BLOG</h1>
-    </nav>
-    <ul class="nav justify-content-end">
-  </nav>
+  <header>
+    <h1>Tech Blog</h1>
   </header>
-  <main class="container container-fluid mt-5">
-    {{{ body }}}
+  <nav>
+    <a href="/">Home</a>
+    {{#if loggedIn}}
+    <button id="logout" class="btn-no-style">Logout</button>
+    <button id="newPost" class="btn-no-style"><a href="/new-post">New Post</a></button>
+    {{else}}
+    <a href="/login">Login</a>
+    {{/if}}
+  </nav>
+  <main>
+    <div class="gallery">
+      {{{body}}}
+    </div>
   </main>
-  <footer>
-
-  </footer>
-
-  <!-- Only include the logout script if the user is logged in -->
-  {{#if logged_in}}
+  {{#if loggedIn}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
